# CppEngine

./: .gitignore  CMakeLists.txt  README.md
EngineCore/: CMakeLists.txt
EngineCore/dependencies/glad/: CMakeLists.txt
EngineCore/dependencies/glad/include/glad/: glad.h
EngineCore/dependencies/glad/src/: glad.c
EngineCore/dependencies/glfw/: CMakeLists.txt  README.md
EngineCore/dependencies/glfw/include/GLFW/: glfw3.h  glfw3native.h
EngineCore/dependencies/glfw/src/: CMakeLists.txt  egl_context.c  egl_context.h  glfw3.pc.in  glfw_config.h.in  init.c  internal.h
EngineCore/dependencies/stb_image/stb/: stb_image.h
EngineCore/include/core/: GameEngine.h  Memory.h  Transform.h
EngineCore/include/core/app/: Application.h
EngineCore/include/core/event/: Event.h  EventListener.h  Events.h
EngineCore/include/core/graphics/: Buffer.h  FBO.h  GraphicsCommand.h  GraphicsCore.h  Material.h  MaterialPool.h  Mesh.h  Shader.h  Texture.h  TextureUnit.h  Vertex.h  VertexArray.h  VertexArrayRenderer.h
EngineCore/include/core/graphics/textures/: BufferTexture.h  RenderableTexture.h
EngineCore/include/core/loaders/: GraphicsLoader.h
EngineCore/include/core/physics/: PhysicsEngine.h
EngineCore/include/core/rendering/: Camera.h  FramebufferStack.h  RenderEngine.h  RenderTarget.h  RenderTask.h  Renderable.h  Renderer.h  Viewport.h
EngineCore/include/core/rendering/renderers/: ForwardRenderer.h
EngineCore/include/core/scene/: Attributes.h  Camera3D.h  MeshRenderer.h  Node.h  NodeMacro.h  SceneTree.h  Spatial.h
EngineCore/include/core/utils/: ATFileParser.h  MeshGenerator.h  Time.h  Translate.h  Tree.h  ZMath.h
EngineCore/include/core/window/: Input.h  KeyCode.h  MouseCode.h  Window.h
EngineCore/src/core/: GameEngine.cpp
EngineCore/src/core/event/: Events.cpp
EngineCore/src/core/graphics/: Buffer.cpp  FBO.cpp  GraphicsCore.cpp  Material.cpp  Mesh.cpp  RenderingCommand.cpp  Shader.cpp  Texture.cpp  TextureUnit.cpp  VertexArray.cpp  VertexArrayRenderer.cpp
EngineCore/src/core/graphics/platform/opengl/: OpenGLArrayBuffer.cpp  OpenGLArrayBuffer.h  OpenGLFBO.cpp  OpenGLFBO.h  (+12 more)
EngineCore/src/core/graphics/textures/: BufferTexture.cpp  RenderableTexture.cpp
EngineCore/src/core/loaders/: GraphicsLoader.cpp
EngineCore/src/core/rendering/: Camera.cpp  FramebufferStack.cpp  RenderEngine.cpp  RenderTarget.cpp  RenderTask.cpp  Renderable.cpp  Viewport.cpp
EngineCore/src/core/rendering/gizmo/: Gizmo.cpp  Gizmo.h
EngineCore/src/core/rendering/renderers/: ForwardRenderer.cpp
EngineCore/src/core/scene/: Attributes.cpp  Camera3D.cpp  MeshRenderer.cpp  Node.cpp  SceneTree.cpp  Spatial.cpp
EngineCore/src/core/utils/: ATFileParser.cpp  Tree.cpp
EngineCore/src/core/window/: Input.cpp  Window.cpp
GEV/: CMakeLists.txt
GEV/dependencies/imgui/: CMakeImplFiles.cmake  CMakeLists.txt  CMakeOptions.cmake
GEV/include/: TextureWindow.h  ViewManager.h  ZitiEditorRenderEngine.h  ZitiView.h
GEV/include/editor/: EditorCamera.h
GEV/include/views/: View.h
GEV/src/: CubeTest.h  TestViewApp.cpp  TestViewApp.h  TextureWindow.cpp  ViewManager.cpp  ZitiEditorRenderEngine.cpp  ZitiView.cpp  main.cpp
GEV/src/editor/: EditorCamera.cpp
GEV/src/views/: NodeHierarchyView.cpp  NodeHierarchyView.h  NodeView.cpp  NodeView.h  ViewportView.cpp  ViewportView.h
Sandbox/: CMakeLists.txt
Sandbox/src/: GameApplication.cpp  GameApplication.h  main.cpp
Sandbox/src/chunk/: Block.cpp  Block.h  Chunk.cpp  Chunk.h  ChunkBlockBuilder.cpp  ChunkBlockBuilder.h  ChunkModelBuilder.cpp  ChunkModelBuilder.h  IChunk.h
Sandbox/src/chunk/blockdata/: BasicUVBlock.cpp  BasicUVBlock.h  BlockFaceData.cpp  BlockFaceData.h  BlockUvs.h  BlockVerticies.h  VoxelBlock.cpp  VoxelBlock.h
Sandbox/src/components/: CameraMovement.cpp  CameraMovement.h  ChunkComponent.cpp  ChunkComponent.h  ChunkManager.cpp  ChunkManager.h  Plane.h  Rotator.h  WorldManager.cpp  WorldManager.h
Sandbox/src/layers/: DebugLayer.cpp  DebugLayer.h
Sandbox/src/scenes/: WorldScene.cpp  WorldScene.h
Sandbox/src/tools/: EntityCreator.h
Sandbox/src/world/: IChunkCreator.h  World.cpp  World.h
threading/: CMakeLists.txt
threading/include/threading/: Lock.h  Thread.h  ThreadManager.h
threading/src/: Lock.cpp  Thread.cpp  ThreadManager.cpp
(+110 files in other folders)
