cmake_minimum_required(VERSION 3.15.3)
project(Threading C CXX)
set(CMAKE_CXX_STANDARD 20)
find_package (Threads)
file(GLOB_RECURSE cpp_files src/*.cpp src/*.c src/*.hpp src/*.inl internal/*.h internal/*.inl internal/*.hpp include/*.hpp include/*.h)
file(GLOB_RECURSE include_files include/*.h)
add_library(Threading STATIC ${include_files} ${cpp_files})
target_include_directories(Threading PRIVATE ${CMAKE_CURRENT_LIST_DIR}/dependencies/sockpp/include)
target_include_directories(Threading PRIVATE ${CMAKE_CURRENT_LIST_DIR}/include)
target_include_directories(Threading PRIVATE ${CMAKE_CURRENT_LIST_DIR}/internal)
target_include_directories(Threading PUBLIC ${CMAKE_CURRENT_LIST_DIR}/include)

